libs/east-c/packages/east-c/include/east/serialization.h


typedef struct {
    uint8_t *data;
    size_t len;
    size_t cap;
} ByteBuffer;
ByteBuffer *byte_buffer_new(size_t initial_cap);
void byte_buffer_free(ByteBuffer *buf);
ByteBuffer *east_beast2_encode(EastValue *value, EastType *type);
EastValue *east_beast2_decode(const uint8_t *data, size_t len, EastType *type);
ByteBuffer *east_beast2_encode_full(EastValue *value, EastType *type);
EastValue *east_beast2_decode_full(const uint8_t *data, size_t len, EastType *type);
EastValue *east_beast2_decode_full_frozen(const uint8_t *data, size_t len, EastType *type);
EastValue *east_beast2_decode_auto(const uint8_t *data, size_t len);
EastType *east_beast2_extract_type(const uint8_t *data, size_t len);
IRNode *east_beast2_decode_ir(const uint8_t *data, size_t len, EastValue **ir_value_out,
                              EastSourceMap **source_map_out);
ByteBuffer *east_beast2_encode_v4(EastValue *value, EastType *type);
ByteBuffer *east_beast2_encode_v5(EastValue *value, EastType *type, int32_t codec_id,
                                  bool with_index);
ByteBuffer *east_beast2_encode_paged(EastValue *value, EastType *type, int32_t codec_id,
                                     size_t target_segment_bytes);
uint64_t east_beast2_fnv1a64(const uint8_t *bytes, size_t len);
ByteBuffer *east_beast2_encode_fence(EastValue *value, EastType *type);
size_t east_beast2_segment_starts(EastValue *collection, EastType *type, size_t *out,
                                  size_t out_cap);
typedef struct Beast2StreamWriter Beast2StreamWriter;
Beast2StreamWriter *east_beast2_writer_new(EastType *type, int32_t codec_id, bool self_contained,
                                           bool with_index);
bool east_beast2_writer_write(Beast2StreamWriter *w, EastValue *batch);
ByteBuffer *east_beast2_writer_take(Beast2StreamWriter *w);
bool east_beast2_writer_finish(Beast2StreamWriter *w);
void east_beast2_writer_free(Beast2StreamWriter *w);
void east_beast2_writer_set_parallel(Beast2StreamWriter *w, bool parallel);
typedef struct Beast2SegmentReader Beast2SegmentReader;
Beast2SegmentReader *east_beast2_reader_new(const uint8_t *data, size_t len, EastType *type);
EastValue *east_beast2_reader_next(Beast2SegmentReader *r);
bool east_beast2_reader_done(Beast2SegmentReader *r);
bool east_beast2_reader_counts(Beast2SegmentReader *r, size_t *segment_count,
                               size_t *element_count);
void east_beast2_reader_free(Beast2SegmentReader *r);
typedef struct Beast2Pages Beast2Pages;
Beast2Pages *east_beast2_pages_new(const uint8_t *data, size_t len, EastType *type);
size_t east_beast2_pages_segment_count(Beast2Pages *p);
size_t east_beast2_pages_element_count(Beast2Pages *p);
bool east_beast2_pages_self_contained(Beast2Pages *p);
const size_t *east_beast2_pages_counts(Beast2Pages *p, size_t *n_out);
EastValue *east_beast2_pages_segment(Beast2Pages *p, size_t i);
EastValue *east_beast2_pages_element(Beast2Pages *p, size_t row);
EastValue *east_beast2_pages_fence(Beast2Pages *p, size_t i);
int east_beast2_pages_get_key(Beast2Pages *p, EastValue *key, EastValue **value_out);
EastValue *east_beast2_pages_get_keys(Beast2Pages *p, EastValue *keys, EastValue **missing_out);
bool east_beast2_pages_find_sorted(Beast2Pages *p, EastValue *target, bool last, size_t *index_out);
EastValue *east_beast2_pages_segment_disjoint(Beast2Pages *p, size_t i);
void east_beast2_pages_free(Beast2Pages *p);
EastType *east_beast2_pages_type(Beast2Pages *p);
typedef struct Beast2Projection Beast2Projection;
Beast2Projection *east_beast2_projection_new(EastType *wire, EastType *proj);
void east_beast2_projection_free(Beast2Projection *pr);
EastType *east_beast2_projection_wire_type(Beast2Projection *pr);
EastType *east_beast2_projection_root_type(Beast2Projection *pr);
bool east_beast2_projection_is_identity(Beast2Projection *pr);
EastValue *east_beast2_pages_segment_projected(Beast2Pages *p, size_t i,
                                               const Beast2Projection *pr);
EastValue *east_beast2_pages_segment_disjoint_projected(Beast2Pages *p, size_t i,
                                                        const Beast2Projection *pr);
void east_beast2_pages_set_projection(Beast2Pages *p, const Beast2Projection *pr);
void east_beast2_reader_set_projection(Beast2SegmentReader *r, const Beast2Projection *pr);
void east_beast2_paged_loop_stats(size_t *projected, size_t *whole);
EastValue *east_beast2_open_paged(uint8_t *data, size_t len, EastType *type);
EastValue *east_beast2_open_paged_frozen(uint8_t *data, size_t len, EastType *type);
EastValue *east_beast2_open_paged_view(const uint8_t *data, size_t len, EastType *type,
                                       bool frozen);
EastValue *east_beast2_open_paged_owned(EastValue *owner, const uint8_t *data, size_t len,
                                        EastType *type, bool frozen);
EastValue *east_beast2_open_paged_external(uint8_t *data, size_t len, EastType *type, bool frozen,
                                           void (*release)(void *ctx, uint8_t *data, size_t len),
                                           void *ctx);
void east_beast2_pages_set_cache_budget(Beast2Pages *p, size_t bytes);
EastValue *east_paged_hydrated(EastValue *v);