libs/east-c/packages/east-c/include/east/values.h

typedef enum {
    EAST_VAL_NULL,
    EAST_VAL_BOOLEAN,
    EAST_VAL_INTEGER,
    EAST_VAL_FLOAT,
    EAST_VAL_STRING,
    EAST_VAL_DATETIME,
    EAST_VAL_BLOB,
    EAST_VAL_ARRAY,
    EAST_VAL_SET,
    EAST_VAL_DICT,
    EAST_VAL_STRUCT,
    EAST_VAL_VARIANT,
    EAST_VAL_REF,
    EAST_VAL_VECTOR,
    EAST_VAL_MATRIX,
    EAST_VAL_FUNCTION,
    EAST_VAL_PAGED,
} EastValueKind;
typedef struct EastValue EastValue;
typedef struct EastCompiledFn EastCompiledFn;
typedef struct Beast2Pages Beast2Pages;
struct btree;
#define EAST_FROZEN_MUTATION_MSG                                                                   \
    "cannot mutate a frozen value (task inputs are immutable) — copy first"
struct EastValue {
    EastValueKind kind;
    int ref_count;
    union {
        bool boolean;
        int64_t integer;
        double float64;
        struct {
            char *data;
            size_t len;
            char inline_data[EAST_STRING_INLINE_CAP + 1];
        } string;
        int64_t datetime; 
        struct {
            uint8_t *data;
            size_t len;
        } blob;
        struct {
            EastValue **items;
            size_t len;
            size_t cap;
            EastType *elem_type;
            bool frozen; 
        } array;
        struct {
            struct btree *tree; 
            EastValue **items;  
            size_t len;         
            size_t cap;         
            bool dirty;         
            bool frozen;        
            EastType *elem_type;
        } set;
        struct {
            struct btree *tree; 
            EastValue **keys;   
            EastValue **values; 
            size_t len;         
            size_t cap;         
            bool dirty;         
            bool frozen;        
            EastType *key_type;
            EastType *val_type;
        } dict;
        struct {
            char **field_names;
            EastValue **field_values;
            size_t num_fields;
            EastType *type;
        } struct_;
        struct {
            EastValue *value;
            EastType *type;
            size_t case_idx;      
            const char *case_tag; 
        } variant;
        struct {
            EastValue *value;
            bool frozen; 
        } ref;
        struct {
            void *data; 
            size_t len;
            EastType *elem_type;
            bool frozen; 
        } vector;
        struct {
            void *data; 
            size_t rows;
            size_t cols;
            EastType *elem_type;
            bool frozen; 
        } matrix;
        struct {
            EastCompiledFn *compiled;
        } function;
        struct {
            Beast2Pages *pages; 
            uint8_t *data;      
            size_t len;
            EastValue *hydrated; 
            EastValue *owner;
            void (*release)(void *ctx, uint8_t *data, size_t len);
            void *release_ctx;
            bool frozen;    
            bool owns_data; 
        } paged;
    } data;
    struct EastValue *gc_next;
    struct EastValue *gc_prev;
    int gc_refs;     
    bool gc_tracked; 
    uint8_t gc_gen;  
    int iter_lock;   
};
static inline bool east_value_frozen(const EastValue *v)
{
    if (!v) return false;
    switch (v->kind) {
    case EAST_VAL_ARRAY:
        return v->data.array.frozen;
    case EAST_VAL_SET:
        return v->data.set.frozen;
    case EAST_VAL_DICT:
        return v->data.dict.frozen;
    case EAST_VAL_REF:
        return v->data.ref.frozen;
    case EAST_VAL_VECTOR:
        return v->data.vector.frozen;
    case EAST_VAL_MATRIX:
        return v->data.matrix.frozen;
    case EAST_VAL_PAGED:
        return v->data.paged.frozen;
    default:
        return false;
    }
}
void east_set_visit(EastValue *set, void (*visit)(EastValue *elem, void *ctx), void *ctx);
void east_dict_visit(EastValue *dict, void (*visit)(EastValue *child, void *ctx), void *ctx);
EastValue *east_vector_new(EastType *elem_type, size_t len);
EastValue *east_matrix_new(EastType *elem_type, size_t rows, size_t cols);
EastValue *east_function_value(EastCompiledFn *fn);
EastValue *east_paged_new(Beast2Pages *pages, uint8_t *data, size_t len, bool owns_data,
                          EastValue *owner, void (*release)(void *ctx, uint8_t *data, size_t len),
                          void *release_ctx);
bool east_paged_stats(EastValue *v, size_t *segments, size_t *segments_decoded,
                      size_t *fences_probed, bool *hydrated);
void east_value_retain(EastValue *v);
void east_value_release(EastValue *v);
bool east_value_equal(EastValue *a, EastValue *b);
int east_value_compare(EastValue *a, EastValue *b);