libs/east-c/packages/east-c/include/east/types.h

typedef enum {
    EAST_TYPE_NEVER,
    EAST_TYPE_NULL,
    EAST_TYPE_BOOLEAN,
    EAST_TYPE_INTEGER,
    EAST_TYPE_FLOAT,
    EAST_TYPE_STRING,
    EAST_TYPE_DATETIME,
    EAST_TYPE_BLOB,
    EAST_TYPE_ARRAY,
    EAST_TYPE_SET,
    EAST_TYPE_DICT,
    EAST_TYPE_STRUCT,
    EAST_TYPE_VARIANT,
    EAST_TYPE_REF,
    EAST_TYPE_VECTOR,
    EAST_TYPE_MATRIX,
    EAST_TYPE_FUNCTION,
    EAST_TYPE_ASYNC_FUNCTION,
    EAST_TYPE_RECURSIVE,
} EastTypeKind;
typedef struct EastType EastType;
typedef struct {
    char *name;
    EastType *type;
} EastTypeField;
struct EastVariantCaseSlot {
    const char *name;
    uint32_t name_hash;
    size_t idx;
};
struct EastType {
    EastTypeKind kind;
    int ref_count;
    int64_t type_id; 
    union {
        EastType *element;
        struct {
            EastType *key;
            EastType *value;
        } dict;
        struct {
            EastTypeField *fields;
            size_t num_fields;
        } struct_;
        struct {
            EastTypeField *cases;
            size_t num_cases;
            struct EastVariantCaseSlot *tag_slots;
            size_t tag_slots_mask;
            struct EastValue **shared_case_values;
        } variant;
        struct {
            EastType **inputs;
            size_t num_inputs;
            EastType *output;
        } function;
        struct {
            EastType *node;
        } recursive;
    } data;
};