libs/east-py/packages/east-py/east/_eastc.pxd


    EastValue *east_vector_new(EastType *elem_type, size_t length)
    EastValue *east_matrix_new(EastType *elem_type, size_t rows, size_t cols)

    EastValue *east_function_value(EastCompiledFn *fn)

    # Ref counting
    void east_value_retain(EastValue *v)
    void east_value_release(EastValue *v)

    # Comparison
    bint east_value_equal(EastValue *a, EastValue *b)
    int east_value_compare(EastValue *a, EastValue *b)

    # Frozen (task-input) brand — per union arm; false for kinds without it.
    bint east_value_frozen(const EastValue *v)
    # The uniform frozen-mutation message, identical across runtimes.
    const char *EAST_FROZEN_MUTATION_MSG


# ─── serialization.h ──────────────────────────────────────────────────────

cdef extern from "east/serialization.h" nogil:
    EastValue *east_beast2_decode_auto(const uint8_t *data, size_t len)
    EastType *east_beast2_extract_type(const uint8_t *data, size_t len)

cdef extern from "east/serialization.h":

    ctypedef struct ByteBuffer:
        uint8_t *data
        size_t len
        size_t cap

    ByteBuffer *byte_buffer_new(size_t initial_cap)
    void byte_buffer_free(ByteBuffer *buf)

    # BEAST2 binary serialization (headerless, type-driven)
    ByteBuffer *east_beast2_encode(EastValue *value, EastType *type)
    EastValue *east_beast2_decode(const uint8_t *data, size_t length, EastType *type)

    # BEAST2 with header (magic bytes + type schema + value). *_full writes the
    # current default container (v5 since #416); *_v4 pins the legacy one.
    ByteBuffer *east_beast2_encode_full(EastValue *value, EastType *type)
    ByteBuffer *east_beast2_encode_v4(EastValue *value, EastType *type)
    EastValue *east_beast2_decode_full(const uint8_t *data, size_t length, EastType *type)
    # Frozen (task-input) decode: every constructed container/Ref/Vector/Matrix
    # carries the frozen flag from construction — mutating builtins refuse and
    # frozen collections compare as value types under Is (#539).
    EastValue *east_beast2_decode_full_frozen(const uint8_t *data, size_t length, EastType *type)
    # BEAST2 IR decode+convert in one shot (keeps type table alive for O(1) resolution)
    IRNode *east_beast2_decode_ir(const uint8_t *data, size_t length, EastValue **ir_value_out,
                                  EastSourceMap **source_map_out)

    # BEAST2 v5 — segment-terminated record stream (issue #416)
    ByteBuffer *east_beast2_encode_v5(EastValue *value, EastType *type, int32_t codec_id,
                                      bint with_index)
    # One collection value as a segmented, indexed blob, cut by the
    # content-defined rule — the canonical bytes for the value.
    ByteBuffer *east_beast2_encode_paged(EastValue *value, EastType *type, int32_t codec_id)

    ctypedef struct Beast2StreamWriter:
        pass
    Beast2StreamWriter *east_beast2_writer_new(EastType *type, int32_t codec_id,
                                               bint self_contained, bint with_index)
    bint east_beast2_writer_write(Beast2StreamWriter *w, EastValue *batch)
    ByteBuffer *east_beast2_writer_take(Beast2StreamWriter *w)
    bint east_beast2_writer_finish(Beast2StreamWriter *w)
    void east_beast2_writer_free(Beast2StreamWriter *w)
    void east_beast2_writer_set_parallel(Beast2StreamWriter *w, bint parallel)

    # The canonical writer of a collection blob: elements in, in canonical
    # order, and segments out wherever the content-defined rule places them.
    ctypedef struct Beast2ElementWriter:
        pass
    Beast2ElementWriter *east_beast2_element_writer_new(EastType *type, int32_t codec_id)
    void east_beast2_element_writer_set_parallel(Beast2ElementWriter *w, bint parallel)
    bint east_beast2_element_writer_add(Beast2ElementWriter *w, EastValue *element)
    bint east_beast2_element_writer_add_pair(Beast2ElementWriter *w, EastValue *key,
                                             EastValue *value)
    ByteBuffer *east_beast2_element_writer_take(Beast2ElementWriter *w)
    bint east_beast2_element_writer_finish(Beast2ElementWriter *w)
    size_t east_beast2_element_writer_segments(const Beast2ElementWriter *w)
    void east_beast2_element_writer_free(Beast2ElementWriter *w)

    # Sorted runs: a Set's or Dict's elements in any order in, sorted
    # canonical runs out, each run's bytes handed to the sink's callbacks —
    # which return C `bool`, hence `cbool`.
    int EAST_BEAST2_RUN_MAX_COUNT
    size_t EAST_BEAST2_RUN_MAX_BYTES
    ctypedef struct Beast2RunSink:
        void *ctx
        cbool (*open)(void *ctx, size_t run) noexcept
        cbool (*write)(void *ctx, const uint8_t *data, size_t length) noexcept
        cbool (*close)(void *ctx) noexcept
    ctypedef struct Beast2RunSorter:
        pass
    Beast2RunSorter *east_beast2_run_sorter_new(EastType *type, int32_t codec_id,
                                                const Beast2RunSink *sink,
                                                EastCompiledFn *merge_fn, bint union_mode)
    void east_beast2_run_sorter_set_parallel(Beast2RunSorter *s, bint parallel)
    bint east_beast2_run_sorter_add(Beast2RunSorter *s, EastValue *element)
    bint east_beast2_run_sorter_add_pair(Beast2RunSorter *s, EastValue *key, EastValue *value)
    bint east_beast2_run_sorter_finish(Beast2RunSorter *s)
    size_t east_beast2_run_sorter_runs(const Beast2RunSorter *s)
    void east_beast2_run_sorter_free(Beast2RunSorter *s)

    # The content-defined cut rule (beast2/v5/boundary.c). Bound here rather
    # than reimplemented, so this runtime, east-c and TypeScript cut one value
    # at the same elements — the property the segment-object layout rests on.
    uint64_t east_beast2_fnv1a64(const uint8_t *bytes, size_t length)
    uint32_t east_beast2_segment_boundary_hash(const uint8_t *bytes, size_t length)
    bint east_beast2_segment_is_boundary(uint32_t hash, size_t count, size_t nbytes)
    bint east_beast2_starts_segment_after(size_t count, size_t nbytes, const uint8_t *hash_input,
                                          size_t length)
    ByteBuffer *east_beast2_encode_fence(EastValue *value, EastType *type)
    size_t east_beast2_segment_starts(EastValue *collection, EastType *type, size_t *out,
                                      size_t out_cap)

    ctypedef struct Beast2SegmentReader:
        pass
    Beast2SegmentReader *east_beast2_reader_new(const uint8_t *data, size_t length,
                                                EastType *type)
    EastValue *east_beast2_reader_next(Beast2SegmentReader *r)
    bint east_beast2_reader_done(Beast2SegmentReader *r)
    bint east_beast2_reader_counts(Beast2SegmentReader *r, size_t *segment_count,
                                   size_t *element_count)
    void east_beast2_reader_free(Beast2SegmentReader *r)

    # v5 paging reader — random access over an indexed, self-contained blob
    # (Beast2Pages itself is declared in the values.h block above — the paged
    # value union arm references it.)
    Beast2Pages *east_beast2_pages_new(const uint8_t *data, size_t length, EastType *type)
    size_t east_beast2_pages_segment_count(Beast2Pages *p)
    size_t east_beast2_pages_element_count(Beast2Pages *p)
    bint east_beast2_pages_self_contained(Beast2Pages *p)
    const size_t *east_beast2_pages_counts(Beast2Pages *p, size_t *n_out)
    EastValue *east_beast2_pages_segment(Beast2Pages *p, size_t i)
    EastValue *east_beast2_pages_element(Beast2Pages *p, size_t row)
    EastValue *east_beast2_pages_fence(Beast2Pages *p, size_t i)
    int east_beast2_pages_get_key(Beast2Pages *p, EastValue *key, EastValue **value_out)
    EastValue *east_beast2_pages_get_keys(Beast2Pages *p, EastValue *keys,
                                          EastValue **missing_out)
    bint east_beast2_pages_find_sorted(Beast2Pages *p, EastValue *target, bint last,
                                       size_t *index_out)
    EastValue *east_beast2_pages_segment_disjoint(Beast2Pages *p, size_t i)
    void east_beast2_pages_free(Beast2Pages *p)

    # v5 column projection (issue #599): a validated wire-type → subset-type
    # decode plan. Projected segment decodes bypass the pager's shared cache;
    # an open-time projection (set_projection) reshapes every pager read and
    # keeps the cache consistent for the pager's lifetime.
    ctypedef struct Beast2Projection:
        pass
    Beast2Projection *east_beast2_projection_new(EastType *wire, EastType *proj)
    void east_beast2_projection_free(Beast2Projection *pr)
    EastType *east_beast2_projection_wire_type(Beast2Projection *pr)
    EastType *east_beast2_projection_root_type(Beast2Projection *pr)
    bint east_beast2_projection_is_identity(Beast2Projection *pr)
    EastValue *east_beast2_pages_segment_projected(Beast2Pages *p, size_t i,
                                                   const Beast2Projection *pr)
    EastValue *east_beast2_pages_segment_disjoint_projected(Beast2Pages *p, size_t i,
                                                            const Beast2Projection *pr)
    void east_beast2_pages_set_projection(Beast2Pages *p, const Beast2Projection *pr)
    void east_beast2_reader_set_projection(Beast2SegmentReader *r, const Beast2Projection *pr)
    # Thread-local counters for the compiled-body paged-loop seam (task
    # inputs): segments decoded projected vs whole, read by eager_stats().
    void east_beast2_paged_loop_stats(size_t *projected, size_t *whole)

    # Lazy pager-backed collection value (issue #505). open_paged takes
    # ownership of `data` (free()-compatible) ON SUCCESS only; hydrated
    # returns a BORROWED value kept alive by the wrapper (NULL on decode
    # failure, message via east_builtin_get_error).
    EastValue *east_beast2_open_paged(uint8_t *data, size_t length, EastType *type)
    # Frozen lazy open (#539): the paged value and every pager-served segment
    # decode frozen; the shape gate collapses to Ref/function exclusions.
    EastValue *east_beast2_open_paged_frozen(uint8_t *data, size_t length, EastType *type)
    # Borrowed-bytes lazy open (#560): the caller keeps the bytes (an mmap)
    # alive and unchanged for the value's lifetime; never takes ownership.
    EastValue *east_beast2_open_paged_view(const uint8_t *data, size_t length, EastType *type,
                                           bint frozen)
    # Owned-bytes lazy open (#658): the paged value retains `owner` (the value
    # whose bytes `data` aliases) for its lifetime; NULL leaves it unretained.
    EastValue *east_beast2_open_paged_owned(EastValue *owner, const uint8_t *data, size_t length,
                                            EastType *type, bint frozen)
    # Host-released lazy open (#658): `release(ctx, data, len)` fires exactly
    # once when the value dies; never on a NULL return.
    EastValue *east_beast2_open_paged_external(uint8_t *data, size_t length, EastType *type,
                                               bint frozen,
                                               void (*release)(void *ctx, uint8_t *data, size_t len),
                                               void *ctx)
    # Byte budget of a pager's decoded-segment cache (#560); the
    # EAST_PAGED_CACHE_BYTES environment variable overrides the default.
    void east_beast2_pages_set_cache_budget(Beast2Pages *p, size_t bytes)
    EastValue *east_paged_hydrated(EastValue *v)
    bint east_paged_stats(EastValue *v, size_t *segments, size_t *segments_decoded,
                          size_t *fences_probed, cbool *hydrated)
    EastType *east_beast2_pages_type(Beast2Pages *p)
